--- a/molecule.yml
+++ b/molecule.yml
@@ -1,14 +1,34 @@
 ---
+
+molecule:
+  test:
+    sequence:
+      - destroy
+      - syntax
+      - create
+      - converge
+
 dependency:
   name: galaxy
+  requirements_file: requirements.yml
+  options:
+    ignore-certs: True
+
 driver:
   name: docker
+
 docker:
   containers:
-    - name: kostyrevaa.datastax-ddc
+
+    - name: centos-6-cassandra
+      image: centos
+      image_version: 6
+      cap_add: SYS_RESOURCE
+
+    - name: ubuntu-14-04
       image: ubuntu
-      image_version: latest
-      ansible_groups:
-        - group1
+      image_version: 14.04
+      cap_add: SYS_RESOURCE
+
 verifier:
   name: testinfra
