--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,25 @@
 datastax_ddc_version: 3.9
 datastax_ddc_cassandra_user: cassandra
 datastax_ddc_cassandra_group: "{{ datastax_ddc_cassandra_user }}"
-datastax_ddc_cassandra_conf_dir_mode: '0755'
+datastax_ddc_cassandra_conf_dir_mode: '0775'
 datastax_ddc_enable_cassandra_service: yes
 datastax_ddc_manage_cassandra_service: yes
+
+cassandra_cluster_name: 'Test Cluster'
+cassandra_concurrent_reads: 32
+cassandra_concurrent_writes: 32
+cassandra_concurrent_counter_writes: 32
+cassandra_memtable_allocation_type: heap_buffers
+cassandra_start_rpc: 'false'
+cassandra_sstable_preemptive_open_interval_in_mb: 50
+cassandra_read_request_timeout_in_ms: 5000
+cassandra_range_request_timeout_in_ms: 10000
+cassandra_write_request_timeout_in_ms: 2000
+cassandra_counter_write_request_timeout_in_ms: 5000
+cassandra_cas_contention_timeout_in_ms: 1000
+cassandra_truncate_request_timeout_in_ms: 60000
+cassandra_request_timeout_in_ms: 10000
+cassandra_endpoint_snitch: SimpleSnitch
+cassandra_seeds: '"127.0.0.1"'
+cassandra_listen_address: localhost
+cassandra_rpc_address: "{{ cassandra_listen_address }}"
