--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -27,3 +27,4 @@ cassandra_endpoint_snitch: SimpleSnitch
 cassandra_seeds: 127.0.0.1
 cassandra_listen_address: localhost
 cassandra_rpc_address: "{{ cassandra_listen_address }}"
+cassandra_incremental_backups: 'false'
