Add optional wait_for handler

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,3 +5,9 @@
     name: cassandra
     state: restarted
   when: datastax_ddc_manage_cassandra_service
+
+- name: wait_for cassandra
+  wait_for:
+    path: "/var/log/cassandra/{{ cassandra_log_name }}"
+    search_regex: 'No gossip backlog'
+  when: datastax_ddc_manage_cassandra_service
